# reciprocal-kzg

./: README.md
benchmark/: README.md  reciprocal_kernel_snapshot.csv  reciprocal_snapshot.csv  run_kernel_snapshot.ps1  run_snapshot.ps1  verify_repro.ps1
docs/: README.md  Terminology.md  m4_milestones.md  reciprocal_grant_checklist.md  reciprocal_poc.md
docs/core_paper/: reciprocal_fold_note.tex
poc/: .gitignore  Cargo.toml  README.md  UPSTREAM.md
poc/.cargo/: config.toml
poc/.github/workflows/: ci.yml
poc/crates/fs/: Cargo.toml
poc/crates/fs/src/: lib.rs
poc/crates/fs/src/definitions/: algorithms.rs  circuits.rs  errors.rs  instances.rs  keys.rs  mod.rs  utils.rs  variants.rs  witnesses.rs
poc/crates/fs/src/nova/: mod.rs
poc/crates/fs/src/nova/algorithms/: key_generator.rs  mod.rs  preprocessor.rs  prover.rs  verifier.rs
poc/crates/fs/src/nova/circuits/: mod.rs  verifier.rs
poc/crates/fs/src/nova/instances/: circuits.rs  mod.rs
poc/crates/fs/src/nova/keys/: mod.rs
poc/crates/fs/src/nova/witnesses/: circuits.rs  mod.rs
poc/crates/ivc/: Cargo.toml
poc/crates/ivc/examples/: reciprocal_poc.rs
poc/crates/ivc/src/: lib.rs
poc/crates/ivc/src/compilers/: mod.rs
poc/crates/ivc/src/compilers/cyclefold/: circuits.rs  mod.rs
poc/crates/ivc/src/compilers/cyclefold/adapters/: mod.rs  nova.rs  reciprocal.rs  reciprocal_bench.rs  reciprocal_decider.rs  reciprocal_types.rs  reciprocal_wrapper.rs
poc/crates/primitives/: Cargo.toml
poc/crates/primitives/examples/: reciprocal_kernel_bench.rs
poc/crates/primitives/src/: lib.rs  traits.rs
poc/crates/primitives/src/algebra/: mod.rs
poc/crates/primitives/src/algebra/field/: emulated.rs  mod.rs
poc/crates/primitives/src/algebra/field/emulated/: alloc.rs  arith.rs  gadgets.rs  mod.rs  ops.rs  tests.rs
poc/crates/primitives/src/algebra/group/: emulated.rs  mod.rs
poc/crates/primitives/src/algebra/ops/: bits.rs  eq.rs  matrix.rs  mod.rs  poly.rs  pow.rs  rlc.rs  vector.rs
poc/crates/primitives/src/arithmetizations/: mod.rs
poc/crates/primitives/src/arithmetizations/ccs/: circuits.rs  mod.rs
poc/crates/primitives/src/arithmetizations/r1cs/: circuits.rs  mod.rs
poc/crates/primitives/src/circuits/: mod.rs  reciprocal_test.rs  utils.rs
poc/crates/primitives/src/commitments/: mod.rs  pedersen.rs
poc/crates/primitives/src/relations/: mod.rs
poc/crates/primitives/src/transcripts/: absorbable.rs  mod.rs
poc/crates/primitives/src/transcripts/griffin/: mod.rs  sponge.rs
poc/crates/primitives/src/transcripts/poseidon/: mod.rs  sponge.rs
poc/crates/primitives/src/utils/: assignments.rs  mod.rs  null.rs
