[package]
name = "sonobe-fs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-crypto-primitives = { workspace = true, features = ["constraints", "sponge", "crh"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-poly = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true, features = ["getrandom"] }
ark-serialize = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
thiserror = { workspace = true }
rayon = { workspace = true }

sonobe-primitives = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true, features = ["curve", "r1cs"] }
ark-pallas = { workspace = true, features = ["curve", "r1cs"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = []
parallel = [
    "sonobe-primitives/parallel",
]
