[package]
name = "sonobe-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ark-crypto-primitives = { workspace = true, features = ["constraints", "sponge", "crh"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-std = { workspace = true, features = ["getrandom"] }
ark-poly = { workspace = true }
ark-poly-commit = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-serialize = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
num-integer = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true, features = ["curve", "r1cs"] }
ark-pallas = { workspace = true, features = ["curve", "r1cs"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = []
parallel = [
    "ark-poly-commit/parallel",
    "ark-relations/parallel",
    "ark-r1cs-std/parallel",
]